--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 agp = "8.7.2"
-kotlin = "1.9.25"
+kotlin = "2.0.20"
 hilt = "2.51"
-ksp = "1.9.25-1.0.20"
+ksp = "2.0.20-1.0.25"
 roomKtx = "2.6.1"
 coreKtx = "1.15.0"
 lifecycleRuntimeKtx = "2.8.7"
@@ -13,7 +13,7 @@ navigationCompose = "2.8.4"
 splashscreen = "1.0.1"
 materialIconsExtended = "1.7.5"
 hiltNavigationCompose = "1.2.0"
-cameraX = "1.3.4"
+cameraX = "1.4.0"
 zxing = "3.3.3"
 datastorePreferences = "1.1.1"
 accompanist-permissions = "0.36.0"
@@ -57,6 +57,7 @@ desugar-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", ver
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 room = { id = "androidx.room", version.ref = "roomKtx" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
