--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ materialIconsExtended = "1.7.8"
 hiltNavigationCompose = "1.2.0"
 cameraX = "1.4.2"
 zxing = "3.3.3"
-datastorePreferences = "1.1.6"
+datastorePreferences = "1.1.4" # Using 1.1.4 -> https://issuetracker.google.com/issues/413078297
 accompanist-permissions = "0.36.0"
 desugarJdkLibs = "2.1.5"
 
